--- a/Itau/pom.xml
+++ b/Itau/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.picpay</groupId>
-	<artifactId>picpay</artifactId>
+	<artifactId>Itau</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>picpay</name>
 	<description>projecto de vaga backend PicPay</description>
